@@ -8,7 +8,7 @@ Homepage: https://github.com/T-vK/ScaleToggle
 
 Package: gnome-shell-extension-scale-toggle
 Architecture: all
-Depends: ${misc:Depends}, gnome-shell (>= 41), python3, python3-dbus
+Depends: ${misc:Depends}, gnome-shell (>= 46), python3, python3-dbus
 Recommends: gnome-tweaks
 Description: Disable the shortcut inhibitor dialog
  Unblank screen when screen saver becomes active.
