@@ -1,11 +1,15 @@
-// Simple Toogle Button Extension
+// Simple Toggle Button Extension
+import Clutter from 'gi://Clutter'; 
+import GObject from 'gi://GObject';
+import St from 'gi://St';
+import Gio from 'gi://Gio';
+
+import * as Main from 'resource:///org/gnome/shell/ui/main.js';
+import * as PanelMenu from 'resource:///org/gnome/shell/ui/panelMenu.js';
+import {Extension} from 'resource:///org/gnome/shell/extensions/extension.js';
+
 
 const TOGGLE_SCRIPT_PATH='/usr/share/gnome-shell/extensions/scaletoggle@t-vk.github.com/scaletoggle.py'
-
-const { Clutter, GObject, St, Gio } = imports.gi;
-const Main = imports.ui.main;
-const PanelMenu = imports.ui.panelMenu;
-
 const TOGGLE_ON_ICON = 'computer-symbolic';
 const TOGGLE_OFF_ICON = 'video-display-symbolic';
 
@@ -55,23 +59,15 @@ class Indicator extends PanelMenu.Button {
     }
 });
 
-class Extension {
-    constructor(uuid) {
-        this._uuid = uuid;
-    }
-
+export default class Toggle extends Extension {
     enable() {
         this._indicator = new Indicator();
         
-        Main.panel.addToStatusArea(this._uuid, this._indicator);
+        Main.panel.addToStatusArea(this.uuid, this._indicator);
     }
 
     disable() {
-        this._indicator.destroy();
+        this._indicator?.destroy();
         this._indicator = null;
     }
-}
-
-function init(meta) {
-    return new Extension(meta.uuid);
 }
