@@ -3,8 +3,7 @@
   "description": "Adds a toggle to change the display scaling of the primary monitor between 100% and 200% (requires python3)",
   "uuid": "scaletoggle@t-vk.github.com",
   "shell-version": [
-    "41", "43", "44"
+    "46"
   ],
-  "version": 1.0,
   "url": "https://github.com/T-vK/ScaleToggle"
 }
